--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 
-        <title>Etherpad Lite</title>
+        <title>CoHoop</title>
 
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -121,8 +121,8 @@
 
         <div id="wrapper">
             <div id="inner">
-                <div id="button" onclick="go2Random()" class="translate">New Pad</div>
-                <div id="label" class="translate">or create/open a Pad with the name</div> 
+                <div id="button" onclick="go2Random()" class="translate">New Hoop</div>
+                <div id="label" class="translate">or create/open a Hoop with the name</div> 
                 <form action="#" onsubmit="go2Name();return false;"> 
                     <input type="text" id="padname" autofocus x-webkit-speech> 
                     <button type="submit">OK</button>
