--- a/src/templates/timeslider.html
+++ b/src/templates/timeslider.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
 
-  <title>Etherpad Lite Timeslider</title>
+  <title>Hoop Timeslider</title>
 
   <link rel="shortcut icon" href="../../favicon.ico">
   <link rel="stylesheet" href="../../static/css/pad.css">
@@ -44,7 +44,7 @@
                 </a>
               </li>
             </ul>
-            <a id="returnbutton">Return to pad</a>
+            <a id="returnbutton">Return to hoop</a>
           </div>
 
           <div>
@@ -87,25 +87,25 @@
                       <h2 class="h2_userdup">Opened in another window.</h2>
                       <h2 class="h2_unauth">No Authorization.</h2>
                       <div id="disconnected_looping">
-                          <p><b>We're having trouble talking to the EtherPad lite synchronization server.</b> You may be connecting through an incompatible firewall or proxy server.</p>
+                          <p><b>We're having trouble talking to the CoHoop synchronization server.</b> You may be connecting through an incompatible firewall or proxy server.</p>
                       </div>
                       <div id="disconnected_initsocketfail">
-                          <p><b>We were unable to connect to the EtherPad lite synchronization server.</b> This may be due to an incompatibility with your web browser or internet connection.</p>
+                          <p><b>We were unable to connect to the CoHoop synchronization server.</b> This may be due to an incompatibility with your web browser or internet connection.</p>
                       </div>
                       <div id="disconnected_userdup">
-                          <p><b>You seem to have opened this pad in another browser window.</b> If you'd like to use this window instead, you can reconnect.</p>
+                          <p><b>You seem to have opened this hoop in another browser window.</b> If you'd like to use this window instead, you can reconnect.</p>
                       </div>
                       <div id="disconnected_unknown">
-                          <p><b>Lost connection with the EtherPad lite synchronization server.</b> This may be due to a loss of network connectivity.</p>
+                          <p><b>Lost connection with the CoHoop synchronization server.</b> This may be due to a loss of network connectivity.</p>
                       </div>
                       <div id="disconnected_slowcommit">
                           <p><b>Server not responding.</b> This may be due to network connectivity issues or high load on the server.</p>
                       </div>
                       <div id="disconnected_unauth">
-                          <p>Your browser's credentials or permissions have changed while viewing this pad. Try reconnecting.</p>
+                          <p>Your browser's credentials or permissions have changed while viewing this hoop. Try reconnecting.</p>
                       </div>
                       <div id="disconnected_deleted">
-                          <p>This pad was deleted.</p>
+                          <p>This hoop was deleted.</p>
                       </div>
                       <div id="reconnect_advise">
                           <p>If this continues to happen, please let us know</p>
